--- a/TicketSystem/web/resources/ezcomp/requete/Add2.xhtml
+++ b/TicketSystem/web/resources/ezcomp/requete/Add2.xhtml
@@ -12,7 +12,7 @@
     <!-- IMPLEMENTATION -->
     <cc:implementation>
         <p:dialog closable="true" closeOnEscape="true" dynamic="true" 
-                  header="Ajouter une Requête" widgetVar="addDialog"
+                  header="Ajouter une Requête" widgetVar="addDialog2"
                   modal="true">
             
             <h:form id="addForm">
@@ -35,7 +35,7 @@
                     <p:outputLabel value="Application"/>
                     <p:selectOneListbox/>
                     
-                    <p:commandButton value="Ajouter" action="#{homeMB.ajouterRFA()}" update="@all"/>
+                    <p:commandButton value="Ajouter" action="#{homeMB.ajouterRFC()}" update="@all"/>
                 </p:panelGrid>             
             </h:form>            
         </p:dialog>
